@@ -1,5 +1,7 @@
 #info
-D	print-node 	# Dump node to file
+?	xxx-not-recognized # Check that unknown actions don't break.
+!	menu-digit	# menu-digit can't be rebound
+D	print-node	# Dump node to file
 #echo-area
 #var
 infopath-no-defaults=On
